JOTM-19/10/2018-Mobile Detalles esteticos finales
* Detalles esteticos finales

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/header_buscar_cliente.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/header_buscar_cliente.xml
@@ -42,25 +42,25 @@
                 android:id="@+id/BtnBuscarClienteActivityNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:text="@string/label_no"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="24sp"
-                tools:ignore="UnusedAttribute" />
+                android:textSize="30sp"
+                tools:ignore="ButtonStyle,UnusedAttribute" />
 
             <Button
                 android:id="@+id/BtnBuscarClienteActivitySi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:text="@string/label_si"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="24sp"
-                tools:ignore="UnusedAttribute" />
+                android:textSize="30sp"
+                tools:ignore="ButtonStyle,UnusedAttribute" />
         </TableRow>
 
     </TableLayout>
