--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/header_buscar_cliente.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/header_buscar_cliente.xml
@@ -42,9 +42,9 @@
                 android:id="@+id/BtnBuscarClienteActivityNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:text="@string/label_no"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="18sp"
@@ -54,9 +54,9 @@
                 android:id="@+id/BtnBuscarClienteActivitySi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/colorButtonLogin"
+                style="@style/SagasTheme.Button"
                 android:text="@string/label_si"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="18sp"
