--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values-v21/styles.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values-v21/styles.xml
@@ -19,6 +19,7 @@
     <style name="SagasTheme.Button" parent="Widget.AppCompat.Button.Colored">
         <item name="android:colorButtonNormal" >@color/colorBackgroundSistemaLogin</item>
         <item name="android:textColor">@color/textcolorButton</item>
+        <item name="android:colorControlHighlight">@color/buttonBackgroundColorHighlight</item>
     </style>
     <style name="ActionBarStyle" parent="Widget.AppCompat.ActionBar">
         <item name="background">@color/colorBackgroundNavigationBar</item>
