--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row clearfix">
                 <div class="card">
-                    <div class="body">                        
+                    <div class="body">
                         <div class="input-group m-b-0">
                             <input type="text" class="form-control" placeholder="Search...">
                             <span class="input-group-addon">
@@ -487,7 +487,7 @@
                         <ul class="ml-menu">
                             <li>@Html.ActionLink("Existencias", "ActualizacionExistencias", "Almacen")</li>
                             <li>@Html.ActionLink("Entradas-Salidas", "MovimientosAlamacen", "Almacen")</li>
-                            
+                            <li>@Html.ActionLink("Salidas de Mercancia", "SalidaMercancia", "Almacen")</li>
                         </ul>
                     </li>
                     <li>
@@ -523,7 +523,7 @@
                             <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
                             <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
                             <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
-                            <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>                            
+                            <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
                             <li>@Html.ActionLink("Puntos de venta", "Index", "PuntoVenta")</li>
                             <li>@Html.ActionLink("Precio de venta", "Index", "PrecioVenta")</li>
                             <li>@Html.ActionLink("Precio de venta Otros", "Index", "PrecioVentaOtro")</li>
@@ -532,7 +532,7 @@
                 </ul>
             </div>
         </div>
-    </aside>   
+    </aside>
 </body>
 </html>
 @*<script src="~/assets/bundles/libscripts.bundle.js"></script>*@
@@ -541,7 +541,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
 <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="~/assets/plugins/bootstrap-select/js/bootstrap-select.min.js"></script>
-<script src="~/assets/plugins/jquery-inputmask/jquery.inputmask.bundle.js"></script> 
+<script src="~/assets/plugins/jquery-inputmask/jquery.inputmask.bundle.js"></script>
 
 <script src="~/assets/plugins/momentjs/moment.js"></script>
 <script src="~/assets/bundles/mainscripts.bundle.js"></script>
