JSA-19/10/2018 Salida producto
Se termina codificación, falta probar

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/SalidaMercancia.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/SalidaMercancia.cshtml
@@ -22,8 +22,8 @@
                     <h2>Salida de Mercancia</h2>
                     <ul class="breadcrumb padding-0">
                         <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
-                        <li class="breadcrumb-item">Almacen</li>
-                        <li class="breadcrumb-item active">Salidas</li>
+                        <li class="breadcrumb-item">Almacén</li>
+                        <li class="breadcrumb-item">Salidas de Mercancía</li>
                     </ul>
                 </div>
             </div>
@@ -55,8 +55,8 @@
                                     </div>
                                 </div>
                             }
-                            <div class="row clearfix">
-                                <div class="blockquote blockquote-info btn-round">
+                             <div class="blockquote blockquote-info btn-round">
+                                <div class="row clearfix">
                                     <div class="table-responsive">
                                         @Html.Action("SalidaRequisicionesPartial")
                                     </div>
