--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/_SalidaRequisicionesPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/_SalidaRequisicionesPartial.cshtml
@@ -1,3 +1,4 @@
+@using System.Configuration;
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "SalidaRequisiciones";
@@ -16,19 +17,33 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
-
+        //settings.Styles.Table.CssClass = "table table-striped";
         settings.Columns.Add("NombreComercial", "Gasera");
         settings.Columns.Add("NumeroRequisicion", "No. Requisición");
-        settings.Columns.Add("FechaRequerida", "Fecha Requerida");
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "FechaRequerida";
+            c.Caption = "Fecha Requerida";
+            c.Width = System.Web.UI.WebControls.Unit.Percentage(10);
+            c.Settings.SortMode = DevExpress.XtraGrid.ColumnSortMode.Custom;
+            c.SortIndex = 0;
+            c.SortOrder = DevExpress.Data.ColumnSortOrder.Descending;
+            c.ColumnType = MVCxGridViewColumnType.DateEdit;
+            c.CellStyle.HorizontalAlign = System.Web.UI.WebControls.HorizontalAlign.Center;
+            var colSettings = c.PropertiesEdit as DateEditProperties;
+            colSettings.DisplayFormatString = ConfigurationManager.AppSettings["FechaHora_F24H"];
+            colSettings.DisplayFormatInEditMode = true;
+        });
         settings.Columns.Add("UsuarioSolicitante", "Solicitante");
         settings.Columns.Add("RequisicionEstatus", "Estatus");
-        
+
+
         settings.Columns.Add(c =>
         {
             c.Caption = "Acción";
             c.SetDataItemTemplateContent(d =>
             {
-                ViewContext.Writer.Write(string.Format("<a href=" + Url.Action("IrSañodas", new { id = d.KeyValue }) + "><i class='material-icons'>forward</i> <span class='icon-name'></span></a>"));
+                ViewContext.Writer.Write(string.Format("<a href=" + Url.Action("Salidas", new { id = d.KeyValue }) + "><i class='material-icons'>forward</i> <span class='icon-name'></span></a>"));
             });
         });
     });
