JOTM-22/10/2018 Catalogo de traspasos y inicio traspasos
*Agrega clase semáforo mobile
* Agrega consulta de catálogos de traspaso
* Inicia método de registro de traspaso

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/menu/main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/menu/main.xml
@@ -6,7 +6,7 @@
         android:icon="@mipmap/ic_libre"
         android:orderInCategory="1"
         android:title=""
-        android:visible="true"
+        android:visible="false"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/pendientes"
