--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values-v21/styles.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values-v21/styles.xml
@@ -28,4 +28,34 @@
     <style name="ActionBarTitleStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">@color/textcolorButton</item>
     </style>
+    <style name="TooltipError" parent="ToolTipLayoutDefaultStyle">
+        <item name="ttlm_backgroundColor">@android:color/holo_orange_light</item>
+    </style>
+    <style name="TooltipGood" parent="ToolTipLayoutDefaultStyle">
+        <item name="ttlm_backgroundColor">@android:color/holo_green_light</item>
+    </style>
+    <declare-styleable name="TooltipLayout">
+        <attr name="ttlm_padding" format="dimension" />
+        <attr name="ttlm_strokeColor" format="color" />
+        <attr name="ttlm_backgroundColor" format="color" />
+        <attr name="ttlm_strokeWeight" format="dimension" />
+        <attr name="ttlm_cornerRadius" format="dimension" />
+        <attr name="ttlm_arrowRatio" format="float" />
+        <attr name="android:textAppearance" />
+        <attr name="ttlm_overlayStyle" format="reference" />
+        <attr name="ttlm_elevation" format="dimension" />
+
+        <!-- font file path inside your assets folder -->
+        <attr name="ttlm_font" format="string" />
+
+        <!-- textview text gravity -->
+        <attr name="android:gravity" />
+    </declare-styleable>
+    <declare-styleable name="TooltipOverlay">
+        <attr name="android:color" />
+        <attr name="android:alpha" />
+        <attr name="ttlm_repeatCount" format="integer" />
+        <attr name="ttlm_duration" format="integer" />
+        <attr name="android:layout_margin" />
+    </declare-styleable>
 </resources>
